scripts/nullaway/original/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8.txt
../original/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/Player.java:30: error: [NullAway] assigning @Nullable expression to @NonNull field
	private King king = null;
	             ^
    (see http://t.uber.com/nullaway )
../original/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/Player.java:32: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Player opponent = null;
	               ^
    (see http://t.uber.com/nullaway )
../original/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/Player.java:103: error: [NullAway] assigning @Nullable expression to @NonNull field
		king = null;
		     ^
    (see http://t.uber.com/nullaway )
../original/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/gui/GUIAdapter.java:57: error: [NullAway] initializer method does not guarantee @NonNull field game (line 36) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public GUIAdapter() throws ClassNotFoundException, IOException 
	       ^
    (see http://t.uber.com/nullaway )
../original/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/Position.java:53: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return POSITIONS.get(Pair.of(column, row));
		^
    (see http://t.uber.com/nullaway )
../original/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/Column.java:161: error: [NullAway] assigning @Nullable expression to @NonNull field
				currColumn = null;
				           ^
    (see http://t.uber.com/nullaway )
../original/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/Column.java:214: error: [NullAway] assigning @Nullable expression to @NonNull field
				currColumn = null;
				           ^
    (see http://t.uber.com/nullaway )
../original/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/Row.java:161: error: [NullAway] assigning @Nullable expression to @NonNull field
				currRow = null;
				        ^
    (see http://t.uber.com/nullaway )
../original/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/Row.java:214: error: [NullAway] assigning @Nullable expression to @NonNull field
				currRow = null;
				        ^
    (see http://t.uber.com/nullaway )
../original/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/Situation.java:313: error: [NullAway] passing @Nullable parameter 'from' where @NonNull is required
		List<Move> moves = king.generateMoves(from);
		                                      ^
    (see http://t.uber.com/nullaway )
../original/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/gui/Board.java:44: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Situation currentSituation = null;
	                  ^
    (see http://t.uber.com/nullaway )
11 errors
